[gd_scene load_steps=6 format=3 uid="uid://iystwq7p4h3x"]

[ext_resource type="Script" path="res://obstaculos.gd" id="1_e22mq"]
[ext_resource type="Texture2D" uid="uid://45pqry1o6fjq" path="res://recursos/pan.png" id="2_cmfr0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvklt"]
size = Vector2(81, 1089)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg87h"]
size = Vector2(82, 1006)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmc1h"]
size = Vector2(106, 286)

[node name="Obstaculos" type="Node2D"]
position = Vector2(650, 264)
script = ExtResource("1_e22mq")

[node name="Tuberia" type="Area2D" parent="."]
position = Vector2(5, 490)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tuberia"]
position = Vector2(20, 571)
scale = Vector2(1.61538, 2.09062)
texture = ExtResource("2_cmfr0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia"]
position = Vector2(19, 348)
shape = SubResource("RectangleShape2D_nvklt")

[node name="Tuberia2" type="Area2D" parent="."]
position = Vector2(0, -541)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tuberia2"]
position = Vector2(25, -664)
rotation = 3.14328
scale = Vector2(1.65602, 3.236)
texture = ExtResource("2_cmfr0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tuberia2"]
position = Vector2(24, 15)
shape = SubResource("RectangleShape2D_kg87h")

[node name="score" type="Area2D" parent="."]
position = Vector2(57, -16)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="score"]
position = Vector2(33, 150)
shape = SubResource("RectangleShape2D_cmc1h")

[connection signal="body_entered" from="Tuberia" to="." method="_on_tuberia_body_entered"]
[connection signal="body_entered" from="Tuberia2" to="." method="_on_tuberia_2_body_entered"]
[connection signal="body_entered" from="score" to="." method="_on_score_body_entered"]
